--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="home">
+<body class="home" id="body-home">
+
+    <div class="dim-background"></div>
 
         <div class="hero-slideshow">
 
