--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
 
 <body>
 
+  <div class="dim-background"></div>
 
   <div class="container">
     <div class="nav-wrapper">
@@ -82,7 +83,7 @@
                     </p>
 
                     <div class="button-container">
-                      <a class="button" href="index.html">Go To Portfolio</a>
+                      <a class="button" href="portfolio.html">Go To Portfolio</a>
                     </div>
                 </div>
             </div>
