--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,8 @@
 
 <body>
 
+    <div class="dim-background"></div>
+
         <div id="nav" class="nav-wrapper">
 
             <div class="left-side">
