--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,15 @@
 
     <div class="dim-background"></div>
 
+	<div class="container">
+
       <div id="nav" class="nav-wrapper">
 
             <div class="left-side">
 
                 <div class="logo-wrapper">
                     <a href="index.html">
-                    <div class="logo">Laurasima Clinton</div>
+                    <div class="logo">LC</div>
                     </a>
                 </div>
 
@@ -399,6 +401,8 @@
 	<p class="website-rights">Laurasima Clinton 2022. All rights reserved ©</p>
 
 	</div>
+
+</div>
 
 </footer>
 
