--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@
 
     <div class="container">
 
-        <div class="nav-wrapper">
+        <div id="nav" class="nav-wrapper">
 
             <div class="left-side">
 
                 <div class="logo-wrapper">
                     <a href="index.html">
-                    <div class="logo">Laurasima Clinton</div>
+                    <div class="logo">LC</div>
                     </a>
                 </div>
 
