--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
                     <div class="logo-wrapper">
 						<a href="index.html">
-							<div class="logo">Laurasima Clinton</div>
+							<div class="logo">LC</div>
 						</a>
                     </div>
     
