--- a/contact.html
+++ b/contact.html
@@ -80,16 +80,16 @@
 
                     <form action="contact-form.php" method="POST">
                         <label for="name">Name</label>
-                        <input id="name" type="text">
+                        <input name="name" id="name" type="text">
 
                         <label for="email">Email</label>
-                        <input id="email" type="text">
+                        <input name="email" id="email" type="text">
 
                         <label for="email-subject">Subject</label>
-                        <input id="subject" type="text">
+                        <input name="subject" id="subject" type="text">
 
                         <label for="message">Type Your Message</label>
-                        <textarea id="message" type="text" rows="10"></textarea>
+                        <textarea name="message" id="message" type="text" rows="10"></textarea>
 
                         <input type="submit" value="Send Message" id="contact-form-btn">
                     </form>
